--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 
 .topmenu:hover {
   color: white;
-  /* Add the styles here */
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
 .topdiv {
@@ -35,6 +36,7 @@ body {
 
 .profile_name {
   float: left;
+  color: lightblue;
   padding-left: 2cm;
   /* Add the styles here */
 }
